fix: remove insane z-index on bootbox modals

--- a/less/style.less
+++ b/less/style.less
@@ -185,10 +185,6 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 	}
 }
 
-.bootbox {
-	z-index: 100001;
-}
-
 .disabled a {
 	pointer-events: none;
 }
